force-app/main/default/objects/PLM_Proposal__c/PLM_Proposal__c.object-meta.xml
<CustomObject>
    <label>Proposal</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>