force-app/main/default/objects/PLM_Proposal__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the description.</description>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>