force-app/main/default/objects/PLM_Proposal__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Family</label>
    <referenceTo>PLM_Product_Family__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>