force-app/main/default/objects/PLM_Proposal__c/fields/Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Name__c</fullName>
    <description>This is the Proposal name.</description>
    <label>Proposal Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>