force-app/main/default/objects/PLM_Proposal__c/recordTypes/Higher_Education.recordType-meta.xml
<RecordType>
    <fullName>Higher_Education</fullName>
    <active>true</active>
    <label>Higher Education</label>
</RecordType>