force-app/main/default/objects/PLM_Proposal__c/recordTypes/Journal.recordType-meta.xml
<RecordType>
    <fullName>Journal</fullName>
    <active>true</active>
    <label>Journal</label>
</RecordType>