force-app/main/default/objects/PLM_Proposal__c/recordTypes/Wiley.recordType-meta.xml
<RecordType>
    <fullName>Wiley</fullName>
    <active>true</active>
    <label>Wiley Efficient Learning(WEL)</label>
</RecordType>